# Snake

./: .gitattributes  .gitignore  CMakeLists.txt  Game.cpp  Game.hpp  README.md  Sprites.cpp  Sprites.hpp  Surfaces.cpp  Surfaces.hpp  main.cpp
Snake.xcodeproj/: project.pbxproj
Snake.xcodeproj/project.xcworkspace/xcuserdata/home.xcuserdatad/: UserInterfaceState.xcuserstate
Snake.xcodeproj/xcuserdata/home.xcuserdatad/xcschemes/: Snake.xcscheme  xcschememanagement.plist
sdl2/: INSTALL_RECEIPT.json
